[design] 스크랩 완료 스낵바 뷰 디자인 수정 및 스트링 리소스 추가

--- a/app/src/main/res/layout/scrap_complete_snackbar.xml
+++ b/app/src/main/res/layout/scrap_complete_snackbar.xml
@@ -16,7 +16,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="17dp"
             android:includeFontPadding="false"
-            android:text="스크랩했습니다."
+            android:text="@string/scrap_snackbar_title"
             android:textAppearance="@style/TextAppearance.body01"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,8 +31,8 @@
             android:layout_marginEnd="6dp"
             android:layout_marginBottom="40dp"
             android:includeFontPadding="false"
-            android:paddingHorizontal="10dp"
-            android:text="스크랩북 보기"
+            android:padding="10dp"
+            android:text="@string/scrap_scankbar_show_scrapbook"
             android:textAppearance="@style/TextAppearance.headline01"
             android:textColor="@color/main_color"
             app:cornerRadius="4dp"
@@ -52,8 +52,9 @@
             android:layout_marginBottom="40dp"
             android:backgroundTint="@color/main_color"
             android:includeFontPadding="false"
+            android:padding="10dp"
             android:paddingHorizontal="10dp"
-            android:text="폴더에 담기"
+            android:text="@string/scrap_snackbar_put_folder"
             android:textAppearance="@style/TextAppearance.headline01"
             app:cornerRadius="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
