--- a/app/src/main/res/layout/item_hot_content.xml
+++ b/app/src/main/res/layout/item_hot_content.xml
@@ -33,6 +33,7 @@
             android:background="@drawable/background_rank"
             android:fontFamily="@font/pretendard_bold"
             android:gravity="center"
+            android:includeFontPadding="false"
             android:lineHeight="24dp"
             android:paddingVertical="3dp"
             android:textColor="@color/white"
@@ -45,6 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:includeFontPadding="false"
             android:text="@{content.title}"
             android:textAppearance="@style/TextAppearance.body02"
             app:layout_constraintEnd_toEndOf="@+id/iv_hot_content_image"
