--- a/app/src/main/res/layout/item_post_content.xml
+++ b/app/src/main/res/layout/item_post_content.xml
@@ -53,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:includeFontPadding="false"
             android:text="@{content.title}"
             android:textAppearance="@style/TextAppearance.body02"
             app:layout_constraintEnd_toEndOf="@+id/iv_content_image"
