--- a/app/src/main/res/layout/item_folder.xml
+++ b/app/src/main/res/layout/item_folder.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="15dp"
+            android:includeFontPadding="false"
             android:text="@{folder.folderTitle}"
             android:textAppearance="@style/TextAppearance.headline02"
             android:textColor="@color/black"
