--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -134,6 +134,81 @@
                     tools:listitem="@layout/item_content_detail"
                     tools:itemCount="2"/>
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_content_hashtag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginHorizontal="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/rv_content_detail"
+                    tools:listitem="@layout/item_content_hashtag"
+                    tools:itemCount="8"/>
+
+                <View
+                    android:id="@+id/v_content_line2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@color/light_grey"
+                    app:layout_constraintTop_toBottomOf="@id/rv_content_hashtag"/>
+
+                <ImageView
+                    android:id="@+id/iv_content_profile2"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/profile"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/v_content_line2"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/tv_content_username2"
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
+                    android:text="user_name"
+                    android:layout_marginLeft="10dp"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toTopOf="@id/iv_content_profile2"
+                    app:layout_constraintStart_toEndOf="@id/iv_content_profile2"
+                    android:theme="@style/TextAppearance.headline01"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_content_createddate2"
+                    android:layout_width="0dp"
+                    android:layout_height="17dp"
+                    android:text="created_date"
+                    android:layout_marginTop="3dp"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/dark_grey"
+                    app:layout_constraintStart_toStartOf="@id/tv_content_username2"
+                    app:layout_constraintTop_toBottomOf="@id/tv_content_username2"
+                    android:theme="@style/TextAppearance.caption01"
+                    />
+
+                <Button
+                    android:id="@+id/btn_content_follow2"
+                    android:layout_width="80dp"
+                    android:layout_height="42dp"
+                    android:backgroundTint="@color/main_color"
+                    android:includeFontPadding="false"
+                    android:text="팔로우"
+                    android:textColor="@color/white"
+                    android:theme="@style/TextAppearance.headline02"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="14dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/v_content_line2"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    app:layout_constraintTop_toBottomOf="@id/iv_content_profile2"/>
+
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
