--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -203,6 +203,207 @@
                     android:layout_marginRight="14dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/v_content_line2"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_content_userimage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    tools:listitem="@layout/item_content_userimage"
+                    tools:itemCount="1"
+                    app:layout_constraintTop_toBottomOf="@id/iv_content_profile2"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <View
+                    android:id="@+id/v_content_line3"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="14dp"
+                    android:background="@color/grey"
+                    app:layout_constraintTop_toBottomOf="@id/rv_content_userimage"/>
+
+                <TextView
+                    android:id="@+id/tv_content_likecount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{data.like_count}"
+                    tools:text="@string/like"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="14dp"
+                    android:includeFontPadding="false"
+                    app:layout_constraintTop_toBottomOf="@id/v_content_line3"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:theme="@style/TextAppearance.caption02"/>
+
+                <TextView
+                    android:id="@+id/tv_content_scrapcount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{data.scrap_count}"
+                    tools:text="@string/scrap"
+                    android:layout_marginStart="12dp"
+                    android:includeFontPadding="false"
+                    app:layout_constraintTop_toTopOf="@id/tv_content_likecount"
+                    app:layout_constraintStart_toEndOf="@id/tv_content_likecount"
+                    android:theme="@style/TextAppearance.caption02"/>
+
+                <TextView
+                    android:id="@+id/tv_content_commentcount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{data.comment_count}"
+                    tools:text="@string/comment"
+                    android:layout_marginStart="12dp"
+                    android:includeFontPadding="false"
+                    app:layout_constraintTop_toTopOf="@id/tv_content_likecount"
+                    app:layout_constraintStart_toEndOf="@id/tv_content_scrapcount"
+                    android:theme="@style/TextAppearance.caption02"/>
+
+                <TextView
+                    android:id="@+id/tv_content_viewcount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{data.view_count}"
+                    tools:text="조회수"
+                    android:layout_marginStart="12dp"
+                    android:includeFontPadding="false"
+                    app:layout_constraintTop_toTopOf="@id/tv_content_likecount"
+                    app:layout_constraintStart_toEndOf="@id/tv_content_commentcount"
+                    android:theme="@style/TextAppearance.caption02"/>
+
+                <View
+                    android:id="@+id/v_content_line4"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_content_likecount"/>
+
+                <TextView
+                    android:id="@+id/tv_content_totalcomment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:theme="@style/TextAppearance.miniCaption01"
+                    android:text="@string/total_comment"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginStart="14dp"
+                    app:layout_constraintTop_toBottomOf="@id/v_content_line4"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <ImageView
+                    android:id="@+id/iv_content_profile3"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/profile"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="22dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_content_totalcomment"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/tv_content_username3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{data.user_name}"
+                    android:layout_marginStart="10dp"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toTopOf="@id/iv_content_profile3"
+                    app:layout_constraintStart_toEndOf="@id/iv_content_profile3"
+                    android:theme="@style/TextAppearance.headline02"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_content_usercomment"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/user_comment"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/black"
+                    app:layout_constraintStart_toStartOf="@id/tv_content_username3"
+                    app:layout_constraintTop_toBottomOf="@id/tv_content_username3"
+                    android:theme="@style/TextAppearance.body02"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_content_commentoption"
+                    android:layout_width="0dp"
+                    android:layout_height="13dp"
+                    android:text="@string/comment_option"
+                    android:theme="@style/TextAppearance.miniCaption01"
+                    android:textColor="@color/dark_grey"
+                    android:includeFontPadding="false"
+                    android:layout_marginTop="5dp"
+                    app:layout_constraintStart_toStartOf="@id/tv_content_usercomment"
+                    app:layout_constraintTop_toBottomOf="@id/tv_content_usercomment"/>
+
+                <View
+                    android:id="@+id/v_content_line5"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey"
+                    android:layout_marginTop="28dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_content_commentoption"/>
+
+                <EditText
+                    android:id="@+id/et_content_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="13dp"
+                    android:layout_marginEnd="14dp"
+                    android:background="@drawable/edittext_shape"
+                    android:hint="@string/input_comment"
+                    android:paddingVertical="13dp"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="70dp"
+                    android:inputType="text"
+                    android:includeFontPadding="false"
+                    android:theme="@style/TextAppearance.body01"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/v_content_line5"/>
+
+                <Button
+                    android:id="@+id/btn_content_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/comment_btn"
+                    android:background="#00ff0000"
+                    android:theme="@style/TextAppearance.body01"
+                    android:textColor="@color/main_color"
+                    android:includeFontPadding="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/et_content_comment"/>
+
+                <View
+                    android:id="@+id/v_content_line6"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/btn_content_comment"/>
+
+                <TextView
+                    android:id="@+id/tv_content_todayrecommend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/TextAppearance.title01"
+                    android:text="@string/today_recommend"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="14dp"
+                    app:layout_constraintTop_toBottomOf="@id/v_content_line6"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_content_todayrecommend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_content_todayrecommend"/>
+
 
                 <View
                     android:layout_width="match_parent"
