--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -2,11 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".presentation.content.ContentActivity">
+    >
 
     <data>
-        <import type="android.view.View"/>
-        
         <variable
             name="data"
             type="com.example.myhouse_aos.domain.model.ContentDetailData" />
@@ -24,10 +22,11 @@
             android:background="@null"
             android:src="@drawable/back"
             android:padding="12dp"
-            android:layout_marginLeft="7dp"
+            android:layout_marginStart="7dp"
             android:layout_marginTop="11dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/back"/>
 
         <ImageButton
             android:id="@+id/btn_content_more"
@@ -37,10 +36,11 @@
             android:src="@drawable/more"
             android:padding="12dp"
             android:layout_marginTop="11dp"
-            android:layout_marginRight="6dp"
+            android:layout_marginEnd="6dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/more"/>
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,28 +57,30 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/profile"
-                    android:layout_marginLeft="14dp"
+                    android:layout_marginStart="14dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_content_username1"
                     android:layout_width="0dp"
-                    android:layout_height="20dp"
-                    android:text="user_name"
-                    android:layout_marginLeft="10dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{data.user_name}"
+                    tools:text="@string/nickname"
+                    android:layout_marginStart="10dp"
                     android:includeFontPadding="false"
                     android:textColor="@color/black"
                     app:layout_constraintTop_toTopOf="@id/iv_content_profile1"
                     app:layout_constraintStart_toEndOf="@id/iv_content_profile1"
                     android:theme="@style/TextAppearance.headline01"
                     />
-                
+
                 <TextView
                     android:id="@+id/tv_content_createddate1"
                     android:layout_width="0dp"
-                    android:layout_height="17dp"
-                    android:text="created_date"
+                    android:layout_height="wrap_content"
+                    android:text="@{data.created_date}"
+                    tools:text="@string/created_date"
                     android:layout_marginTop="3dp"
                     android:includeFontPadding="false"
                     android:textColor="@color/dark_grey"
@@ -89,15 +91,15 @@
 
                 <Button
                     android:id="@+id/btn_content_follow1"
-                    android:layout_width="80dp"
-                    android:layout_height="42dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:backgroundTint="@color/main_color"
                     android:includeFontPadding="false"
-                    android:text="팔로우"
+                    android:text="@string/follow"
                     android:textColor="@color/white"
                     android:theme="@style/TextAppearance.headline02"
 
-                    android:layout_marginRight="14dp"
+                    android:layout_marginEnd="14dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
@@ -114,12 +116,13 @@
                     android:id="@+id/tv_content_optiontag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="option_tag"
+                    android:text="@{data.option_tag}"
+                    tools:text="@string/option_tag"
                     android:textColor="@color/dark_grey"
                     android:includeFontPadding="false"
                     android:theme="@style/TextAppearance.body02"
                     android:layout_marginTop="14dp"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/v_content_line1"
                     />
@@ -144,14 +147,14 @@
                     android:layout_marginHorizontal="16dp"
                     app:layout_constraintTop_toBottomOf="@id/rv_content_detail"
                     tools:listitem="@layout/item_content_hashtag"
-                    tools:itemCount="8"/>
+                    tools:itemCount="1"/>
 
                 <View
                     android:id="@+id/v_content_line2"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="40dp"
-                    android:background="@color/light_grey"
+                    android:background="@color/grey"
                     app:layout_constraintTop_toBottomOf="@id/rv_content_hashtag"/>
 
                 <ImageView
@@ -159,7 +162,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/profile"
-                    android:layout_marginLeft="14dp"
+                    android:layout_marginStart="14dp"
                     android:layout_marginTop="20dp"
                     app:layout_constraintTop_toBottomOf="@id/v_content_line2"
                     app:layout_constraintStart_toStartOf="parent"/>
@@ -168,8 +171,9 @@
                     android:id="@+id/tv_content_username2"
                     android:layout_width="0dp"
                     android:layout_height="20dp"
-                    android:text="user_name"
-                    android:layout_marginLeft="10dp"
+                    android:text="@{data.user_name}"
+                    tools:text="@string/nickname"
+                    android:layout_marginStart="10dp"
                     android:includeFontPadding="false"
                     android:textColor="@color/black"
                     app:layout_constraintTop_toTopOf="@id/iv_content_profile2"
@@ -181,7 +185,8 @@
                     android:id="@+id/tv_content_createddate2"
                     android:layout_width="0dp"
                     android:layout_height="17dp"
-                    android:text="created_date"
+                    android:text="@{data.created_date}"
+                    tools:text="@string/created_date"
                     android:layout_marginTop="3dp"
                     android:includeFontPadding="false"
                     android:textColor="@color/dark_grey"
@@ -192,17 +197,19 @@
 
                 <Button
                     android:id="@+id/btn_content_follow2"
-                    android:layout_width="80dp"
-                    android:layout_height="42dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:backgroundTint="@color/main_color"
                     android:includeFontPadding="false"
-                    android:text="팔로우"
+                    android:text="@string/follow"
                     android:textColor="@color/white"
                     android:theme="@style/TextAppearance.headline02"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="14dp"
+                    android:layout_marginEnd="14dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/v_content_line2"/>
+                    app:layout_constraintTop_toTopOf="@id/v_content_line2"
+                    tools:ignore="HardcodedText" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_content_userimage"
                     android:layout_width="wrap_content"
@@ -438,8 +445,8 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    app:layout_constraintTop_toBottomOf="@id/iv_content_profile2"/>
+                    android:layout_height="55dp"
+                    app:layout_constraintTop_toBottomOf="@id/rv_content_userbest"/>
 
 
 
