--- a/app/src/main/res/layout/item_content_detail.xml
+++ b/app/src/main/res/layout/item_content_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
+
 
         <variable
             name="data"
@@ -23,6 +23,7 @@
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:layout_marginTop="16dp"
+            android:src="@{context.getDrawable(data.image)}"
             app:layout_constraintBottom_toTopOf="@id/iv_item_contentdetail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,9 +44,10 @@
             android:id="@+id/tv_item_contentdetail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@{data.content}"
             app:layout_constraintTop_toBottomOf="@id/iv_item_contentdetail"
             app:layout_constraintStart_toStartOf="parent"
             android:theme="@style/TextAppearance.body01"
