--- a/app/src/main/res/layout/item_content_hashtag.xml
+++ b/app/src/main/res/layout/item_content_hashtag.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        
+        <variable
+            name="data"
+            type="com.example.myhouse_aos.domain.model.HashTagData" />
     </data>
 
     <TextView
@@ -20,6 +22,7 @@
         android:theme="@style/TextAppearance.body01"
         android:layout_marginEnd="6dp"
         android:layout_marginTop="6dp"
+        android:text="@{data.hash_tag}"
         tools:text = "#취미일상"/>
 
 </layout>
